created basic design

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
       </div>
     </div>
 
-    <div class="sidebar"></div>
+    <div class="sidebar">
+      <div class="sidebar-title">Todo list</div>
+      <button class="addCategory">Add category</button>
+    </div>
 
     <script src="script.js"></script>
   </body>
